# photoViewer

./: .gitignore  CMakeLists.txt  README.md  commandLineOptions.h  getImage.cpp  getOrientation.cpp  main.cpp  mainWindow.cpp  mainWindow.h  mainWindowEvents.cpp  myLabel.cpp  processCommandLine.cpp  roundRobin.h  sleepyTime.h
createDatabase/: createDatabase.cpp  getOne.cpp  table.h
createDatabase/sqlite/: CMakeLists.txt  compile.bat
exif/: exif.cpp  exif.h
